force-app/main/default/objects/Gov_Data_Config__mdt/Gov_Data_Config__mdt.object-meta.xml
<CustomObject>
    <label>Gov Data Config</label>
    <pluralLabel>Gov Data Configs</pluralLabel>
</CustomObject>