force-app/main/default/objects/Gov_Data_Config__mdt/fields/Base_Path__c.field-meta.xml
<CustomField>
    <fullName>Base_Path__c</fullName>
    <label>Base Path</label>
    <description>CKAN datastore_search path appended to the Data_Gov_IL named credential, e.g. /api/3/action/datastore_search.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>