force-app/main/default/objects/Gov_Data_Config__mdt/fields/Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Base_Url__c</fullName>
    <label>Base URL</label>
    <description>Base URL of the open-data host (must match an active Remote Site Setting), e.g. https://data.gov.il</description>
    <type>Text</type>
    <length>255</length>
</CustomField>