force-app/main/default/objects/Gov_Data_Config__mdt/fields/City_Field__c.field-meta.xml
<CustomField>
    <fullName>City_Field__c</fullName>
    <label>City Field Name</label>
    <description>The CKAN record field name that holds the city/locality name (Hebrew), e.g. שם_ישוב.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>