force-app/main/default/objects/Gov_Data_Config__mdt/fields/Street_Field__c.field-meta.xml
<CustomField>
    <fullName>Street_Field__c</fullName>
    <label>Street Field Name</label>
    <description>The CKAN record field name that holds the street name (Hebrew), e.g. שם_רחוב.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>