force-app/main/default/objects/Gov_Data_Config__mdt/fields/Streets_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Streets_Resource_Id__c</fullName>
    <label>Streets Resource Id</label>
    <description>CKAN datastore resource id of the data.gov.il streets dataset (population authority, dataset 321). Verify/update from data.gov.il if the lookup returns nothing.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>